<resources>
    <string name="app_name">splbDemo</string>
<!--    <string name="open_socket">OpenSocket</string>-->
<!--    <string name="close_socket">closeSocket</string>-->
<!--    <string name="register">registerApp</string>-->
<!--    <string name="unregister">unregisterApp</string>-->
<!--    <string name="get_available_net_interface">getAvailableNetInterface</string>-->
<!--    <string name="get_mobile_signal_level">getMobileSignalLevel</string>-->
<!--    <string name="get_wifi_signal_level">getWiFiSignalLevel</string>-->
<!--    <string name="bind_to_mobile_interface">bindToMobileInterface</string>-->
<!--    <string name="bind_to_wifi_interface">bindToWiFiInterface</string>-->
<!--    <string name="get_traffic_state">getTrafficStats</string>-->
<!--    <string name="test_website">testWebSite</string>-->
    <string name="test_splb_mode1">testSplbMode1</string>
    <string name="stop_test_splb_mode1">stopTestSplbMode1</string>
    <string name="test_splb_mode2">testSplbMode2</string>
    <string name="stop_test_splb_mode2">stopTestSplbMode2</string>
    <string name="test_splb_mode3">testSplbMode3</string>
    <string name="stop_test_splb_mode3">stopTestSplbMode3</string>
    <string name="test_splb_mode4">testSplbMode4</string>
    <string name="stop_test_splb_mode4">stopTestSplbMode4</string>
    <string name="test_lte_mode">testLtePath</string>
    <string name="stop_test_lte_mode">stopTestLtePath</string>
    <string name="test_wifi_mode">testWifiPath</string>
    <string name="stop_test_wifi_mode">stopTestWifiPath</string>
    <string name="test_udp_socket">testUdpSocket</string>
    <string name="recv_msg">receive message:</string>
    <!--<string name=""></string>
    <string name=""></string>
    <string name=""></string>
    <string name=""></string>-->
</resources>
